# pvital-pkg

./: README.md  pyproject.toml
.github/: CODEOWNERS
.github/scripts/: announce_pr_on_slack.py  announce_release_on_slack.py  slack_notify.py
.github/workflows/: pr-slack-notification.yml  pr-slack-webhook-notification.yml  python-publish.yml  release-announce-on-slack.yml
src/pvital_pkg/: __main__.py  commands.py  utils.py  version.py
tests/: test_commands.py  test_utils.py
